--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -1,4 +1,4 @@
-name: app
+name: teamcanvas
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^5.6.11
   firebase_auth: ^5.6.2
   shared_preferences: ^2.5.3
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
