--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_auth: ^5.6.2
   shared_preferences: ^2.5.3
   provider: ^6.1.1
+  flutter_bloc: ^9.1.1
+  flutter_reorderable_list: ^1.3.1
 
 dev_dependencies:
   flutter_test:
