--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   provider: ^6.1.1
   flutter_bloc: ^9.1.1
   flutter_reorderable_list: ^1.3.1
+  firebase_messaging: ^15.2.9
+  cached_network_image: ^3.4.1
+  flutter_local_notifications: ^16.1.2
+  timezone: ^0.9.1
 
 dev_dependencies:
   flutter_test:
